tooling/nargo_cli/tests/snapshots/execution_failure/oob_array_set_unit_element/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Index out of bounds, array has size 1, but index was 1
  ┌─ src/main.nr:3:5
  │
3 │     array[x] = ();
  │     --------
  │
  = Call stack:
    1: main
            at src/main.nr:3:5

Failed assertion
