tooling/nargo_cli/tests/snapshots/execution_failure/oob_array_set_unit_element/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Index out of bounds: 1 is out of bounds for the array of length 1
  ┌─ src/main.nr:3:5
  │
3 │     array[x] = ();
  │     --------
  │

Error interpreting main function
